force-app/main/default/objects/COMM_MonthlyFiscalDocumentControl__c/COMM_MonthlyFiscalDocumentControl__c.object-meta.xml
<CustomObject>
    <description>Records used to control the fiscal documents generated monthly through SAP</description>
    <label>Monthly Fiscal Document Control</label>
    <nameField>
        <displayFormat>MFDC-{0000}</displayFormat>
        <label>Monthly Fiscal Document Control Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Fiscal Document Controllers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>