force-app/main/default/objects/COMM_MonthlyFiscalDocumentControl__c/fields/COMM_Account__c.field-meta.xml
<CustomField>
    <fullName>COMM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client&apos;s Account associated with the Fiscal Document</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Monthly Fiscal Document Controllers</relationshipLabel>
    <relationshipName>MonthlyFiscalDocumentControllers</relationshipName>
    <type>Lookup</type>
</CustomField>