force-app/main/default/objects/COMM_MonthlyFiscalDocumentControl__c/fields/COMM_DocumentMonth__c.field-meta.xml
<CustomField>
    <fullName>COMM_DocumentMonth__c</fullName>
    <defaultValue>MONTH(TODAY())</defaultValue>
    <description>Month of Document</description>
    <label>Document Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>