force-app/main/default/objects/COMM_MonthlyFiscalDocumentControl__c/fields/COMM_DocumentType__c.field-meta.xml
<CustomField>
    <fullName>COMM_DocumentType__c</fullName>
    <defaultValue>&quot;Invoice&quot;</defaultValue>
    <description>The type of Fiscal Document that is sent to SAP (Invoice or Credit Memo)</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
                <default>true</default>
                <label>Invoice</label>
            </value>
            <value>
                <fullName>CreditMemo</fullName>
                <label>Credit Memo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>