force-app/main/default/objects/COMM_MonthlyFiscalDocumentControl__c/fields/COMM_DocumentYear__c.field-meta.xml
<CustomField>
    <fullName>COMM_DocumentYear__c</fullName>
    <defaultValue>YEAR(TODAY())</defaultValue>
    <description>Year of Document</description>
    <label>Document Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>