force-app/main/default/objects/COMM_MonthlyFiscalDocumentControl__c/fields/COMM_ProcessStatus__c.field-meta.xml
<CustomField>
    <fullName>COMM_ProcessStatus__c</fullName>
    <description>Processing status</description>
    <label>Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Processed</fullName>
                <default>true</default>
                <label>Not Processed</label>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>