force-app/main/default/objects/COMM_MonthlyFiscalDocumentControl__c/fields/COMM_RetryCounter__c.field-meta.xml
<CustomField>
    <fullName>COMM_RetryCounter__c</fullName>
    <description>Number of Max retries to generate fiscal document</description>
    <label>Retry Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>