force-app/main/default/objects/COMM_MonthlyFiscalDocumentControl__c/fields/COMM_SentRequestJson__c.field-meta.xml
<CustomField>
    <fullName>COMM_SentRequestJson__c</fullName>
    <description>JSON that was sent to SAP</description>
    <label>Sent Request JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>