force-app/main/default/objects/COMM_MonthlyFiscalDocumentControl__c/fields/COMM_StatusMessage__c.field-meta.xml
<CustomField>
    <fullName>COMM_StatusMessage__c</fullName>
    <description>Process Status Message</description>
    <label>Status Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>