force-app/main/default/objects/COMM_MonthlyFiscalDocumentControl__c/fields/COMM_Type__c.field-meta.xml
<CustomField>
    <fullName>COMM_Type__c</fullName>
    <description>Type of Product that was sold in the Fiscal Document</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscriptions</fullName>
            </value>
            <value>
                <fullName>Reservations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>